# lisp

./: .clang-format  CMakeLists.txt
include/lisp/: category.hpp  default_stack.hpp  evaluate.hpp  functions.hpp  lisp.hpp  null.hpp  overload.hpp  parser.hpp  stack.hpp  string_utils.hpp  symbol.hpp  tokenizer.hpp  value.hpp
include/lisp/utils/: ansi.hpp  box.hpp  container_utils.hpp  debug_utils.hpp  demangle.hpp  iterator_range.hpp  pipeline.hpp  std_ostream.hpp  string_utils.hpp  type_traits.h  type_traits.hpp
src/: CMakeLists.txt  input.lisp  main.cpp
src/lisp/: category.cpp  evaluate.cpp  parser.cpp  tokenizer.cpp  value.cpp
tests/: CMakeLists.txt  basic_test.cpp
